css/main.css
html {
  font-family: Lato, sans-serif;
  background-color: #fff;
}

header {
  background-color: #e7423c;
  overflow: hidden;
  border-bottom: 5px solid #282828;
}

h1 {
  font-family: Ubuntu, serif;
  color: #fff;
  margin: 0;
}

.h1-link {
  text-decoration: none;
}

.icon-1 {
  width: 160px;
}

.nav {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: none;
  clear: both;
  border-top: 5px solid #282828;
}

.nav a {
  display: block;
  padding: .75em;
  text-decoration: none;
  color: #fff;
  background-color: #f0746c;
}

.nav a:hover {
  color: #282828;
  background-color: #fff;
}

.nav li {
  border-bottom: 5px solid #e7423c;
}

.nav li:last-child {
  border-bottom: 0;
}

.nav-check {
  position: absolute;
  top: -3em;
}

.nav-check:checked ~ .nav {
  display: block;
}

.nav-label {
  cursor: pointer;
}

.nav-check:checked ~ .nav-label {
  background-color: #e7423c;
}

.nav-close {
  display: none;
}

.nav-check:checked ~ .nav-label .nav-open {
  display: none;
}

.nav-check:checked ~ .nav-label .nav-close {
  display: block;
}

.banner {
  position: relative;
  border-bottom: 5px solid #282828;
}

.banner-text {
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
  color: #fff;
  text-align: center;
  text-shadow: 0 0 8px rgba(0, 0, 0, .6);
}

.banner-btn {
  background-color: #f0746c;
  border: 3px solid #e7423c;
  border-radius: 20px;
}

.banner-btn:hover {
  background-color: #e7423c;
  border: 3px solid #e7423c;
}

section {
  background-color: #434343;
}

h2 {
  color: #fff;
  text-align: center;
  margin: 0;
}

.cards {
  border-bottom: 5px solid #282828;
}

.card-text {
  color: #fff;
}

.banner-s {
  max-height: 75vh;
  overflow: hidden;
}

.banner-text-s {
  background-color: rgba(240, 116, 110, .6);
  border: 3px solid rgba(231, 66, 60, .6);
  text-shadow: 0 0 8px rgba(0, 0, 0, .6);
  border-radius: 20px;
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translateX(-50%);
  color: #fff;
  width: 75%;
}

.banner-text-prem {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  color: #fff;
  text-align: center;
}

.banner-s-pic {
  min-height: 50vh;
  min-width: 550px;
  margin: 0 auto;
}

.banner-s-btn {
  background-color: #f0746c;
  border: 3px solid #e7423c;
  border-radius: 20px;
  position: absolute;
  bottom: 10%;
  left: 50%;
  transform: translateX(-50%);
  color: #fff;
  text-align: center;
}

.banner-title {
  text-shadow: 0 0 8px rgba(0, 0, 0, .6);
  width: 100%;
}

.feat-list {
  margin: 0 0 .5em;
}

footer {
  background-color: #434343;
  color: #fff;
  text-align: center;
  overflow: hidden;
  border-bottom: 10px solid #282828;
}

footer p {
  margin: 0;
}

.banner-side {
  background-color: #282828;
}

.form {
  border-bottom: 5px solid #282828;
  color: #fff;
}

.form-fix {
  display: inline-block;
}

.input-text {
  color: #434343;
}

.review {
  background-color: #434343;
  overflow: hidden;
}

.review-text {
  color: #434343;
}

.check-text {
  color: #e7423c;
}

@media only screen and (min-width: 38em) {

  .nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: inline-block;
    clear: none;
    border-top: 0;
    float: right;
  }

  .nav a {
    display: block;
    margin: .45em .25em .25em .1em;
    padding: .75em;
    text-decoration: none;
    color: #fff;
    background-color: #f0746c;
    border-radius: 10px;
  }

  .nav a:hover {
    color: #282828;
    background-color: #fff;
  }

  .nav li {
    border-bottom: 0;
    display: inline-block;
  }

  .nav li:last-child {
    border-bottom: 0;
  }

  .nav-check {
    position: absolute;
    top: -3em;
  }

  .nav-check:checked ~ .nav {
    display: block;
  }

  .nav-label {
    cursor: pointer;
  }

  .nav-check:checked ~ .nav-label {
    background-color: #e7423c;
  }

  .nav-open {
    display: none;
  }

  .nav-close {
    display: none;
  }

  .nav-check:checked ~ .nav-label .nav-open {
    display: block;
  }

  .nav-check:checked ~ .nav-label .nav-close {
    display: block;
  }

  .form-fix {
    max-width: 45%;
  }

  .option-fix {
    max-width: 90%;
    display: inline-block;
  }

}

@media only screen and (min-width: 60em) {

  .icon-1 {
    width: 200px;
  }

  .nav {
    margin: .25em .25em .25em .1em;
  }

}

